# GraphAM

./: .gitignore  CMakeLists.txt  README.md
app/bfs/: bfs.cc  bfs.h
app/mst/: mst_context.h  mst_helper.h  mst_prim.cc  mst_prim.h
app/pagerank/: pagerank.cc  pagerank.h
app/sssp/: sssp.cc  sssp.h
app/wcc/: wcc.cc  wcc.h  wcc_helper.h
graph/: distributor.cc  distributor.h  flags.cc  flags.h  graph_instance.cc  graph_instance.h  graph_spec.cc  graph_spec.h  iterator_pair.h  main.cc  utils.h  worker.cc  worker.h  worker_helper.cc  worker_helper.h
graph/app/: i_app.h  i_app_helper.h  i_ud_context.h
graph/fragment/: edge.h  ev_fragment_loader.cc  ev_fragment_loader.h  fragment_factory.h  fragment_loader_factory.h  i_fragment.h  i_fragment_loader.h  immutable_edgecut_fragment.cc  immutable_edgecut_fragment.h  vertex.h
graph/utils/: InStorage.h  OutStorage.h  exception.h
misc/: batch_file  batch_file.mac  batch_file.simple  run_and_test.sh
misc/test-data/: test.e  test.v
